@@ -1,6 +1,12 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2011-08-31  Dean Jackson  <dino@apple.com>
+
+- Remove commas from shorthand function parameter input.
+- Rename unsharp() shorthand to sharpen()
+- drop-shadow shorthand parameter is now a <shadow>
+
 2011-08-30  Dean Jackson  <dino@apple.com>
 
 - note that feCustom is probably not going to be included at this stage
